Tambah layout ML

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col-4">
                 <div class="card">
-                    <a href="#">
+                    <a href="assets/game/mobilelegends.html">
                     <div class="gambar-product">
                         <img src="assets/product/mobilelegends.png" alt="ml" width="70px" style="top: -34px;">
                     </div>
